etc/docker/kubernetes/openshift/docker-xwiki.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deploy
spec:
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      volumes:
        - 
          name: mysql-vol
          persistentVolumeClaim:
            claimName: mysql-pvc
        - 
          configMap:
            name: mysql-init-cm
          name: mysql-init-vol
      containers:
        - 
          args:
            - $(MYSQL_ARG_1)
            - $(MYSQL_ARG_2)
            - $(MYSQL_ARG_3)
            - $(MYSQL_ARG_4)
          image: 'mysql:5.7'
          name: mysql-container
          ports:
            - 
              containerPort: 3306
              protocol: TCP
          volumeMounts:
            - 
              mountPath: /var/lib/mysql
              name: mysql-vol
            - 
              mountPath: /docker-entrypoint-initdb.d
              name: mysql-init-vol
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xwiki-deploy
spec:
  selector:
    matchLabels:
      app: xwiki
  template:
    metadata:
      labels:
        app: xwiki
    spec:
      volumes:
        - 
          name: xwiki-vol
          persistentVolumeClaim:
            claimName: xwiki-pvc
      containers:
        - 
          image: secobau/docker-xwiki:2.2
          name: xwiki-container
          ports:
            - 
              containerPort: 8080
              protocol: TCP
          volumeMounts:
            - 
              mountPath: /usr/local/xwiki          
              name: xwiki-vol
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mysql-netpol
spec:
  ingress:
    - 
      from:
        - 
          podSelector:
            matchLabels:
              app: xwiki
      ports:
        - 
          port: 3306
  podSelector:
    matchLabels:
      app: mysql
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: xwiki-netpol
spec:
  ingress:
    - 
      ports:
        - 
          port: 8080
  podSelector:
    matchLabels:
      app: xwiki
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: xwiki-route
spec:
  to:
    kind: Service
    name: xwiki-svc
  port:
    targetPort: 8080
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-svc
spec:
  ports:
    - 
      port: 3306
  selector:
    app: mysql
---
apiVersion: v1
kind: Service
metadata:
  name: xwiki-svc
spec:
  selector:
    app: xwiki
  ports:
    - 
      port: 8080
