etc/docker/kubernetes/openshift/template.yaml
#########################################################################
#      Copyright (C) 2024        Sebastian Francisco Colomar Bauza      #
#      SPDX-License-Identifier:  GPL-2.0-only                           #
#########################################################################
apiVersion: template.openshift.io/v1
kind: Template
metadata:
  annotations:
    description: Docker xWiki
    openshift.io/display-name: Docker xWiki
    openshift.io/provider-display-name: Sebastian Colomar
    tags: xwiki
    version: ${APP_VERSION}
  name: docker-xwiki
message: xWiki is now deployed.
objects:
-
  apiVersion: v1
  data:
    args-1: '--character-set-server=utf8mb4'
    args-2: '--collation-server=utf8mb4_bin'
    args-3: '--explicit-defaults-for-timestamp=1'
    args-4: '--datadir=/var/lib/mysql/data'
  kind: ConfigMap
  metadata:
    name: mysql-args-cm
-
  apiVersion: v1
  data:
    init.sql: grant all privileges on *.* to xwiki@'%'
  kind: ConfigMap
  metadata:
    name: mysql-init-cm
-
  apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: mysql-deploy
  spec:
    selector:
      matchLabels:
        app: mysql
    template:
      metadata:
        labels:
          app: mysql
      spec:
        containers:
        - 
          args:
          - $(MYSQL_ARG_1)
          - $(MYSQL_ARG_2)
          - $(MYSQL_ARG_3)
          - $(MYSQL_ARG_4)
        volumes:
        - 
          name: mysql-vol
          persistentVolumeClaim:
            claimName: mysql-pvc
        - 
          configMap:
            name: mysql-init.sql
          name: mysql-init-vol
-
  apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: xwiki-deploy
  spec:
    selector:
      matchLabels:
        app: xwiki
    template:
      metadata:
        labels:
          app: xwiki
      spec:
        containers:
        - 
          image: secobau/docker-xwiki:latest
          name: xwiki-container
          ports:
          - 
            containerPort: 8080
          volumeMounts:
          - 
            mountPath: /usr/local/xwiki          
            name: xwiki-vol
        volumes:
        - 
          name: xwiki-vol
          persistentVolumeClaim:
            claimName: xwiki-pvc
-
  apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    name: mysql-netpol
  spec:
    ingress:
    - 
      from:
      - 
        podSelector:
          matchLabels:
            app: xwiki
      ports:
      - 
        port: 3306
    podSelector:
      matchLabels:
        app: mysql
-
  apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    name: xwiki-netpol
  spec:
    ingress:
    - 
      ports:
      - 
        port: 8080
    podSelector:
      matchLabels:
        app: xwiki
-
  apiVersion: v1
  kind: PersistentVolumeClaim
  metadata:
    name: mysql-pvc
  spec:
    accessModes:
    - ReadWriteOnce
    resources:
      requests:
        storage: 1Gi
    storageClassName: gp3-csi
-
  apiVersion: v1
  kind: PersistentVolumeClaim
  metadata:
    name: xwiki-pvc
  spec:
    accessModes:
    - ReadWriteOnce
    resources:
      requests:
        storage: 1Gi
    storageClassName: gp3-csi
-
  apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    name: xwiki-route
  spec:
    to:
      kind: Service
      name: xwiki-svc
    port:
      targetPort: 8080
    tls:
      insecureEdgeTerminationPolicy: Redirect
      termination: edge
-
  apiVersion: v1
  stringData:
    MYSQL_DATABASE: xwiki
    MYSQL_PASSWORD: xwiki
    MYSQL_ROOT_PASSWORD: xwiki
    MYSQL_USER: xwiki
  kind: Secret
  metadata:
    name: mysql-secret
  type: Opaque
-
  apiVersion: v1
  stringData:
    DB_DATABASE: xwiki
    DB_HOST: mysql-svc
    DB_PASSWORD: xwiki
    DB_USER: xwiki
  kind: Secret
  metadata:
    name: xwiki-secret
  type: Opaque
-
  apiVersion: v1
  kind: Service
  metadata:
    name: mysql-svc
  spec:
    ports:
    - 
      port: 3306
    selector:
      app: mysql
-
  apiVersion: v1
  kind: Service
  metadata:
    name: xwiki-svc
  spec:
    selector:
      app: xwiki
    ports:
    - 
      port: 8080
